--- a/README.Rmd
+++ b/README.Rmd
@@ -26,6 +26,7 @@ library(badger)
 `r badge_devel("fontikar/ohwhaley", "blue")`
 `r badge_lifecycle("experimental", "orange")`
 [![R-CMD-check](https://github.com/yangsophieee/ohwhaley/workflows/R-CMD-check/badge.svg)](https://github.com/yangsophieee/ohwhaley/actions)
+[![Codecov test coverage](https://codecov.io/gh/yangsophieee/ohwhaley/branch/master/graph/badge.svg)](https://app.codecov.io/gh/yangsophieee/ohwhaley?branch=master)
 <!-- badges: end -->
 
 Whale-come! This R package was inspired by [cowsay](https://github.com/sckott/cowsay) and [praise](https://github.com/rladies/praise). I hope this package made you smile today! 
